assets/tailwind-compiled.css
/* ... */
.grid-cols-1 {
    grid-template-columns: repeat(1, minmax(0, 1fr))
}

.grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr))
}

.grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr))
}

.grid-cols-\[44px_1fr_80px\] {
    grid-template-columns: 44px 1fr 80px
}

.grid-rows-3 {
    grid-template-rows: repeat(3, minmax(0, 1fr))
}

.flex-col {
    flex-direction: column
}

.flex-wrap {
    flex-wrap: wrap
}

.items-start {
    align-items: flex-start
}

.items-end {
    align-items: flex-end
}

.\!items-center {
    align-items: center !important
}

.items-center {
    align-items: center
}

.items-stretch {
    align-items: stretch
}

.justify-end {
    justify-content: flex-end
}

.\!justify-center {
    justify-content: center !important
}

.justify-center {
    justify-content: center
}

.justify-between {
    justify-content: space-between
}

.gap-1 {
    gap: 4px
}

.gap-12 {
    gap: 48px
}

.gap-2 {
    gap: 8px
}

.gap-2\.5 {
    gap: 10px
}

.gap-3 {
    gap: 12px
}

.gap-4 {
    gap: 16px
}

.gap-6 {
    gap: 24px
}

.gap-8 {
    gap: 32px
}

.gap-\[5px\] {
    gap: 5px
}

.gap-x-3 {
    -moz-column-gap: 12px;
         column-gap: 12px
}

.gap-x-4 {
    -moz-column-gap: 16px;
         column-gap: 16px
}

.gap-x-6 {
    -moz-column-gap: 24px;
         column-gap: 24px
}

.gap-y-4 {
    row-gap: 16px
}

.space-y-1 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(4px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(4px * var(--tw-space-y-reverse))
}

.space-y-2 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(8px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(8px * var(--tw-space-y-reverse))
}

.space-y-3 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(12px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(12px * var(--tw-space-y-reverse))
}

.space-y-5 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(20px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(20px * var(--tw-space-y-reverse))
}

.space-y-6 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(24px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(24px * var(--tw-space-y-reverse))
}

.space-y-8 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(32px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(32px * var(--tw-space-y-reverse))
}

.overflow-hidden {
    overflow: hidden
}

.overflow-y-auto {
    overflow-y: auto
}

.scroll-smooth {
    scroll-behavior: smooth
}

.truncate {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap
}

.whitespace-nowrap {
    white-space: nowrap
}

.text-nowrap {
    text-wrap: nowrap
}

.\!rounded-full {
    border-radius: 9999px !important
}

.rounded {
    border-radius: 4px
}

.rounded-2xl {
    border-radius: 16px
}

.rounded-3xl {
    border-radius: 24px
}

.rounded-full {
    border-radius: 9999px
}

.rounded-lg {
    border-radius: 8px
}

.rounded-md {
    border-radius: 6px
}

.rounded-sm {
    border-radius: 2px
}

.rounded-xl {
    border-radius: 12px
}

.rounded-t-lg {
    border-top-left-radius: 8px;
    border-top-right-radius: 8px
}

.rounded-tr-md {
    border-top-right-radius: 6px
}

.\!border {
    border-width: 1px !important
}

.\!border-0 {
    border-width: 0px !important
}

.border {
    border-width: 1px
}

.border-0 {
    border-width: 0px
}

.border-2 {
    border-width: 2px
}

.border-b {
    border-bottom-width: 1px
}

.border-l {
    border-left-width: 1px
}

.border-l-2 {
    border-left-width: 2px
}

.border-r-2 {
    border-right-width: 2px
}

.border-t {
    border-top-width: 1px
}

.border-t-0 {
    border-top-width: 0px
}

.border-t-2 {
    border-top-width: 2px
}

.border-solid {
    border-style: solid
}

.border-none {
    border-style: none
}

.\!border-gray-200 {
    --tw-border-opacity: 1 !important;
    border-color: rgb(229 231 235 / var(--tw-border-opacity, 1)) !important
}

.border-\[\#0F172A\] {
    --tw-border-opacity: 1;
    border-color: rgb(15 23 42 / var(--tw-border-opacity, 1))
}

.border-\[\#152031\] {
    --tw-border-opacity: 1;
    border-color: rgb(21 32 49 / var(--tw-border-opacity, 1))
}

.border-\[\#3b82f6\] {
    --tw-border-opacity: 1;
    border-color: rgb(59 130 246 / var(--tw-border-opacity, 1))
}

.border-\[\#683d0e\] {
    --tw-border-opacity: 1;
    border-color: rgb(104 61 14 / var(--tw-border-opacity, 1))
}

.border-\[\#C8A96E\] {
    --tw-border-opacity: 1;
    border-color: rgb(200 169 110 / var(--tw-border-opacity, 1))
}

.border-\[\#DED8CF\] {
    --tw-border-opacity: 1;
    border-color: rgb(222 216 207 / var(--tw-border-opacity, 1))
}

.border-\[\#E7E2D9\] {
    --tw-border-opacity: 1;
    border-color: rgb(231 226 217 / var(--tw-border-opacity, 1))
}

.border-black {
    --tw-border-opacity: 1;
    border-color: rgb(0 0 0 / var(--tw-border-opacity, 1))
}

.border-blue-500 {
    --tw-border-opacity: 1;
    border-color: rgb(59 130 246 / var(--tw-border-opacity, 1))
}

.border-gray-100 {
    --tw-border-opacity: 1;
    border-color: rgb(243 244 246 / var(--tw-border-opacity, 1))
}

.border-gray-200 {
    --tw-border-opacity: 1;
    border-color: rgb(229 231 235 / var(--tw-border-opacity, 1))
}

.border-gray-200\/20 {
    border-color: rgb(229 231 235 / 0.2)
}

.border-gray-300 {
    --tw-border-opacity: 1;
    border-color: rgb(209 213 219 / var(--tw-border-opacity, 1))
}

.border-gray-400 {
    --tw-border-opacity: 1;
    border-color: rgb(156 163 175 / var(--tw-border-opacity, 1))
}

.border-gray-600 {
    --tw-border-opacity: 1;
    border-color: rgb(75 85 99 / var(--tw-border-opacity, 1))
}

.border-green-500 {
    --tw-border-opacity: 1;
    border-color: rgb(34 197 94 / var(--tw-border-opacity, 1))
}
/* ... */

